minor tweaks + fix form

--- a/index.html
+++ b/index.html
@@ -432,11 +432,18 @@
               placeholder="Describe your vision, timeline, use-case, and any specific requirements..."
               required
             ></textarea>
+            <input type="hidden" name="_subject" value="New Submission from Portfolio Site">
+            <input type="hidden" name="_captcha" value="true">
             <!-- <span class="error-message"  id="message-error"></span> -->
             <!-- <input type="text" placeholder="Describe your vision, timeline, use-case, and any specific requirements..." name="message"> -->
             <button id="submit" class="filled" type="submit">
               Send message
             </button>
+            <p class="form-disclaimer">
+              We'll get back to you within 48 hours. All information sent/recieved is kept confidential. See our <a
+                    href="privacy.html">Privacy Policy</a> for more information.
+            </p>
+
 <!--            <small-->
 <!--              >*You may have to disable pop-up blockers for this form to-->
 <!--              work*</small-->
