add email to form

--- a/index.html
+++ b/index.html
@@ -424,6 +424,10 @@
                 Enterprise - $999
               </option>
             </select>
+
+            <label for="email">Email *</label>
+            <input type="email" name="email" id="email" placeholder="Your email address" required>
+            
             <!-- <span  class="error-message" id="tier-error"></span> -->
             <label for="message">Tell us about your project *</label>
             <textarea
