design and anim tweaks + linked projects, more optimizations

--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@
           </h3>
         </section>
 
-        <section id="projects" class="fade-in-up">
+        <section id="projects" class="fade-in-zoom">
           <h2>What we've done.</h2>
           <div class="cards">
-            <div class="card">
+            <div class="card fade-in-left">
               <img src="/Friends.png" alt="" />
               <div class="content">
                 <h3>Friends Construction, LLC</h3>
@@ -283,10 +283,12 @@
                   Complete web-overhaul, from zero to hero with modern
                   technologies.
                 </p>
-                <button class="outlined">Read more</button>
+                <button class="outlined">
+                  <a href="https://friends-construction.web.app/" target="_blank">Read more</a>
+                </button>
               </div>
             </div>
-            <div class="card">
+            <div class="card fade-in-right">
               <img src="/Blink.png" alt="" />
               <div class="content">
                 <h3>Blink</h3>
@@ -294,10 +296,12 @@
                   Entire design and development with backend functionality and
                   security.
                 </p>
-                <button class="outlined">Read more</button>
+                <button class="outlined">
+                  <a href="https://blink-20403.web.app/" target="_blank">Read more</a>
+                </button>
               </div>
             </div>
-            <div class="card">
+            <div class="card fade-in-left">
               <img src="/Jotter.png" alt="" />
               <div class="content">
                 <h3>Jotter</h3>
@@ -305,15 +309,17 @@
                   Complete development pipeline using scalable technologies to
                   support thousands of website visitors.
                 </p>
-                <button class="outlined">Read more</button>
+                <button class="outlined">
+                  <a href="https://jotter-98391.web.app/" target="_blank">Read more</a>
+                </button>
               </div>
             </div>
           </div>
         </section>
-        <section id="pricing" class="fade-in-zoom">
+        <section id="pricing" class="fade-in-right">
           <h2>Pick what you need.</h2>
           <div class="tiers">
-            <div class="tier">
+            <div class="tier fade-in-up">
               <div class="content">
                 <h3>Starter</h3>
                 <h2>$249</h2>
@@ -334,7 +340,7 @@
                     <button class="outlined starter">Get started</button>
                 </div>
             </div>
-            <div class="tier">
+            <div class="tier fade-in-up">
               <div class="content">
                 <h3>Pro</h3>
                 <h2>$499</h2>
@@ -357,7 +363,7 @@
                     <button class="outlined pro">Get started</button>
                 </div>
             </div>
-            <div class="tier">
+            <div class="tier fade-in-up">
               <div class="content">
                 <h3>Enterprise</h3>
                 <h2>$999</h2>
@@ -456,22 +462,23 @@
         </section>
       </main>
 
-      <footer>
-        <ul class="first">
+      <footer class="fade-in-zoom">
+        <ul class="first fade-in-left">
           <img src="/Designo Wordmark.png" alt="" />
         </ul>
-        <ul>
+        <ul class="fade-in-left">
           <li>Services</li>
+
           <a href="#pricing">Pricing</a>
           <a href="#contact">Contact</a>
         </ul>
-        <ul>
+        <ul class="fade-in-left">
           <li>Company</li>
           <a href="#about">About us</a>
           <a href="#projects">Projects</a>
           <a href="#testimonials">Reviews</a>
         </ul>
-        <ul>
+        <ul class="fade-in-left">
           <li>Legal</li>
           <a href="/privacy.html">Privacy</a>
         </ul>
